# 2025-p1-ethanpinto

./: README.md  pyproject.toml
todo/views/: routes.py
